syntax = "proto3";

package admanager.coreplatformintegration.service.v1;

import "google/protobuf/timestamp.proto";

message OrderDataRequest {
  string merchant_id = 1;
  repeated string campaign_ids = 2;
  optional string date_from = 3; // YYYY-MM-DD format
  optional string date_to = 4;   // YYYY-MM-DD format
}

message CoreOrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double unit_price = 3;
  double total_price = 4;
}

message CoreOrder {
  string order_id = 1;
  repeated CoreOrderItem items = 2;
  double total_value = 3;
  string currency = 4;
  google.protobuf.Timestamp timestamp = 5;
  optional string attribution_source = 6;
}

message OrderDataResponse {
  repeated CoreOrder orders = 1;
}